--- a/landingpage.html
+++ b/landingpage.html
@@ -65,7 +65,7 @@
   </section>
 
   <footer class="bg-danger text-info text-center py-3">
-    <p>&copy;2025 Farkhan. All rights reserved.</p>
+    <p>&copy;2025 Copyright. All rights reserved.</p>
   </footer>
 </body>
 </html>
