--- a/landingpage.html
+++ b/landingpage.html
@@ -27,7 +27,7 @@
   </nav>
   <section id="beranda_awal" class="bg-warning text-center text-white py-5">
     <div class="beranda container">
-      <h1>Website Portofolio Landing</h1>
+      <h1>Website Portofolio YUHLEZ - Software House</h1>
       <p class="nama">Farkhan Bisyir.</p>
     </div>
   </section>
